--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -371,7 +371,7 @@ h6 {
 #hero {
   width: 100%;
   height: 65vh;
-  background: url("../img/nr.png") center;
+  background: url("../img/nr.avif") center;
   background-size: cover;
   position: relative;
 }
